--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div>
       <div class="XdozegamerzX>
         <div class="our videos">
-          <h3>ENTRY TITLE</h3>
+          <h3>our favorite games</h3>
         </div>
         <img src="imgs/pattern.png" alt="artIMG" class="mypic" style="float:left; padding:10px;"/>
         <div class="artTxt">
