--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="contact.html">CONTACT</a></li>
     </ul>
     <div class="bio">
-      <img src="destiny_the_dark_below_4" alt="MYPIC" class="mypic"  />
+      <img src="imgs/destiny_the_dark_below_4.jpg" alt="MYPIC" class="mypic"  />
       <br>
       <p>
         I am ___, and you are here at my blog where I rant about the world. This is also where I put my various works throughout social media.
