--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <br>
       <iframe width="640" height="360" src="https://www.youtube.com/embed/dYegAorgLc4" frameborder="0" allowfullscreen></iframe>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi in efficitur magna, a laoreet lorem. Proin condimentum magna blandit semper vulputate. Vestibulum feugiat, odio consectetur euismod tristique, turpis sem hendrerit ex, ut iaculis ex dolor sit amet dui. Morbi sed ante mi. Etiam ultrices, nunc in porttitor commodo, enim nulla dictum arcu, at convallis ante erat convallis lorem. Phasellus eget vulputate lectus. Integer lacinia facilisis est, non commodo lorem accumsan id. Etiam laoreet nunc nulla. Sed sodales malesuada leo, vel iaculis ex tincidunt non. Curabitur tempor tincidunt tortor nec ultrices. Nulla porttitor sollicitudin cursus. Quisque risus orci, convallis eu tincidunt ut, fermentum id diam. Etiam non turpis at orci consectetur dapibus et iaculis nibh.
+         I really hope u can enjoy our vids rember this channel was made for fun this will give us a chance to see some gameplats of all sorts of games my friends and i will keep updateing our channle with vids:)
         </p>
         </div>
       </div>
