--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
     <div class="bio">
       <img src="imgs/destiny_the_dark_below_4.jpg" alt="MYPIC" class="mypic"  />
-      <br>75</br>
+      <br>
       <p>75</p>
         I am ___, and you are here at my blog where I rant about the world. This is also where I put my various works throughout social media.
       </p>
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div>
-      <div class="XdozegamerzX>
+      <div class="entry>
         <div class="our videos">
           <h3>our favorite games</h3>
         </div>
